<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingTop="8dp"
    android:paddingRight="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trigger" />

    <EditText
        android:id="@+id/editTrigger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/trigger_hint"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions"
        android:singleLine="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/expansion" />

    <EditText
        android:id="@+id/editExpansion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:hint="@string/expansion_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine|textCapSentences"
        android:minLines="3" />

</LinearLayout>
